# RiskRadar

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1347cbde6c60_add_score_checks_and_rename_input_column.py  2ef27328fd0c_test_split.py  398cc1299bc4_add_issuer_inn_and_is_public.py  431f85a692f4_add_risk_score_columns_and_checks.py  5a4d2ad3ad98_add_inn_and_is_public_to_issuers.py  8152b0e243be_initial_schema.py  84c7fa5d5fd6_create_issuers_table.py  966beec7a0bb_add_document_indexes.py  c71b814151b4_add_risk_score_check_constraints.py  c8a16ed2243a_add_jsonb_fields.py  e71ee972dcd9_add_core_tables.py
app/: main.py
app/api/: health.py  metrics.py
app/api/v1/: documents.py  issuers.py  router.py
app/core/: clients.py  config.py  db.py  deps.py  health.py  logging.py  qdrant.py  redis.py  vector_names.py
app/db/: __init__.py  base.py  enums.py  models.py
app/db/models/: __init__.py  agent_trace.py  document.py  ingestion_job.py  issuer.py  risk_report.py
app/llm/: __init__.py  base.py  circuit_breaker.py  deepseek.py  gigachat.py  gigachat_oauth.py  instrumentation.py  mock.py  router.py  structured.py  types.py
app/llm/embeddings/: __init__.py  base.py  gigachat.py  instrumentation.py  local.py  mock.py
app/llm/prompts/: __init__.py  registry.py
app/observability/: metrics.py  middleware.py  request_id.py
app/rag/: __init__.py  chunking.py  filters.py  ingestion.py  normalize.py  retriever.py  scoring.py  sparse.py  types.py  vector_index.py
app/rag/parsers/: __init__.py  html.py  pdf.py  text.py
app/repositories/: __init__.py  document.py  issuer.py
app/schemas/: __init__.py  common.py  ingestion.py  issuer.py  retrieval.py
deploy/: prometheus.yml
prompts/: risk_summary.v1.md
src/riskradar/: __init__.py
tests/: conftest.py  test_db.py  test_embeddings.py  test_gigachat.py  test_health.py  test_hybrid_retriever.py  test_issuers_api.py  test_llm.py  test_llm_circuit_breaker.py  test_llm_router.py  test_prompt_registry.py  test_rag_chunking.py  test_rag_ingestion.py  test_rag_normalize.py  test_rag_parsers.py  test_rag_retrieval.py  test_rag_upload.py  test_structured.py  test_vector_index.py
