[project]
name = "riskradar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vasya Ksenofontov", email = "vasyaksenof2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
riskradar = "riskradar:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
