[project]
name = "riskradar"
version = "0.1.0"
description = "Issuer risk analysis API — multi-agent platform with RAG and explainable scoring"
authors = [
    { name = "Vasya Ksenofontov", email = "vasyaksenof2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.47.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.0",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0",
    "qdrant-client>=1.12",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "ASYNC", "PT", "TID", "C4", "PIE", "RET", "ANN"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires running docker compose",
]
addopts = "-m 'not integration'"
